# TPRLab5

./: .gitignore
henrar/: a.out  bsort  bucketsort.c  lab5.c~  main.c  main.c~  run.sh
henrar/old/: lab5.c  main.c
henrar/results/: out_basic_100000.txt  out_basic_1000000.txt  out_basic_10000000.txt  out_basic_100000000.txt  out_scaling_100000.txt  out_scaling_1000000.txt  out_scaling_10000000.txt  out_scaling_100000000.txt  results.xlsx
liscju/: CMakeLists.txt  main.cpp  run.sh
liscju/results/: basic_results_100000  basic_results_1000000  basic_results_10000000  basic_results_100000000  results.ods  scale_results_100000  scale_results_1000000  scale_results_10000000  scale_results_100000000
lucas/: bucketsort.c  main.c  main.c~  main.out  matrix_multi.c  out_basic_100000.txt  out_basic_10000000.txt  out_scaling_1000000.txt  run.sh
lucas/results/: bsort  out_basic_100000.txt  out_basic_1000000.txt  out_basic_10000000.txt  out_basic_100000000.txt  out_scaling_100000.txt  out_scaling_1000000.txt  out_scaling_10000000.txt  out_scaling_100000000.txt  zeus.ods
